dev-eks-cluster/loki/loki-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: loki-gateway
  namespace: loki
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: # acm 인증서 arn
        mode: SIMPLE
      hosts:
        - # domain
